# rust-relations

./: Cargo.toml  README.md
.github/workflows/: build.yml  rust.yml  test.yml
src/: lib.rs  relation.rs
